--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       } else {
           $('.top-text').html("A hora chegou!");
           $('.days').css('font-size', '28px');
-          $('.days').html("Obrigado a todos pela paciência,<br>desculpem qualquer indecência, impertinência, improvidência, indecência, <br>agradeço por terem ajudado com a minha independência,<br>agradeço pela preferência! ;)");
+          $('.days').html("Obrigado a todos pela paciência,<br>desculpem qualquer impertinência, improvidência, indecência, <br>agradeço por terem ajudado com a minha independência,<br>agradeço pela preferência! ;)");
           $('.timer').hide();
           $('.bottom-text').html("Vocês sentirão a minha falta.<br>:)");
       }
